<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.edu.utfpr.lucasreisalunos.mobilefinalproject.view.DayInfos">

    <TextView
        android:id="@+id/txtViewTitleDayAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/txtViewTitleDayAmount"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="32dp" />

    <EditText
        android:id="@+id/editTextValueDayAmount"
        android:layout_width="105dp"
        android:layout_height="35dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/editTxtValueDayAmount"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewTitleDayAmount" />

    <TextView
        android:id="@+id/txtViewTitleOpPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtViewTitleOpPercent"
        android:textSize="18sp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextValueDayAmount"
        app:layout_constraintHorizontal_bias="0.502"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/editTextValueOpPercentage"
        android:layout_width="52dp"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/editTextValueOpPercentage"
        android:textSize="14sp"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewTitleOpPercent" />

    <TextView
        android:id="@+id/txtViewTitleCurrentAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtViewTitleCurrentAmount"
        android:textSize="18sp"
        android:layout_marginRight="32dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp" />

    <EditText
        android:id="@+id/editTextValueCurrentAmount"
        android:layout_width="98dp"
        android:layout_height="35dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/editTextValueCurrentAmount"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txtViewTitleCurrentAmount"
        android:layout_marginRight="32dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="32dp" />

    <TextView
        android:id="@+id/txtViewTitlePercentDayProfit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="32dp"
        android:text="@string/txtViewTitlePercentDayProfit"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonCalculateProfit" />

    <TextView
        android:id="@+id/txtViewValuePercentDayProfit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="32dp"
        android:layout_marginTop="12dp"
        android:text="@string/txtViewValuePercentDayProfit"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewTitlePercentDayProfit"
        android:layout_marginEnd="32dp" />

    <TextView
        android:id="@+id/txtViewTitleDayProfit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:text="@string/txtViewTitleDayProfit"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonCalculateProfit" />

    <TextView
        android:id="@+id/txtViewValueDayProfit"
        android:layout_width="29dp"
        android:layout_height="21dp"
        android:text="@string/txtViewValueDayProfit"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txtViewTitleDayProfit"
        android:layout_marginLeft="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="32dp" />

    <Button
        android:id="@+id/buttonCalculateProfit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="32dp"
        android:onClick="menuCalculateProfitOnClick"
        android:text="@string/buttonCalculateProfit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextValueOpPercentage" />

    <Button
        android:id="@+id/buttonShowOperations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="69dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:onClick="buttonShowOperationsOnClick"
        android:text="@string/buttonShowOperations"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
